Ch_07_istio_ambient_service_mesh/07_03_istio_ambient_zero_trust/10-gitops/02-rollout-canary.yaml
# 07_03_istio_ambient_zero_trust/10-gitops/02-rollout-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
  namespace: shop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api
      containers:
      - name: api
        image: playbuilder/shop-api:v1.1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 65532
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
  strategy:
    canary:
      canaryService: api-canary
      stableService: api
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: api-route
            namespace: shop
      steps:
      - setWeight: 5
      - pause: { duration: 60 }
      - setWeight: 50
      - pause: { duration: 60 }
      - setWeight: 100
